test/testData/highlight/errors/type/f2.ml
let _ = Int32.(add 1 2l)
(*
Error: This expression has type int but an expression was expected of type int32 Hint: Did you mean `1l'?
*)